Fix safari whitespace

--- a/components/macbook/styles.module.css
+++ b/components/macbook/styles.module.css
@@ -8,7 +8,7 @@
 .content {
   position: absolute;
   width: 74.7%;
-  top: 5.8%;
+  top: 5.9%;
   left: 12.6%;
   max-height: 81%;
   overflow: hidden;
